--- a/css/style.css
+++ b/css/style.css
@@ -121,9 +121,9 @@ body{
     width: 330px !important;
     position: absolute;
     z-index: 998;
-    top:1370px ;
+    top:-1px ;
     height: 560px;
-    /* left:-40px ; */
+    left:-2px ;
 }
 .layout{
     background-color: rgba(0, 0, 0, 0.5);
@@ -648,6 +648,9 @@ textarea{
 .sub-btn:hover{
     color: #0B5355;
 }
+.mapFrameHome{
+    width: 100% !important;
+}
 
 /* footer -------------------------------------------------------------------------- */
 .item ul{
@@ -971,7 +974,7 @@ textarea{
         font-size: 21px;
     }
     .myslide img {
-        height: 55vh;
+        height: 32vh;
     }
     .map-desc p{
         font-size: 16px;
@@ -980,7 +983,7 @@ textarea{
         width: 70% !important;
         left: 50% !important;
         transform: translateX(-50%) !important;
-        top: 27% !important;
+        top: 7% !important;
         z-index: 1000;
         position: absolute !important;
         display: block !important;
@@ -990,6 +993,7 @@ textarea{
     }
     .carousel-caption h5{
         font-size: 1.6rem ;
+        line-height: 30px;
     }
     .my-btn-tr{
         margin-bottom: 20px;
@@ -1074,5 +1078,418 @@ textarea{
 @media (min-width: 768px){
     .container, .container-md, .container-sm {
         max-width: 93% !important;
+    }
+}
+
+
+/* very big screen .......................................................................... */
+
+@media (min-width: 1500px){
+    .serviceHolder{
+        margin-top: 19%;
+    }
+    .carousel-caption {
+        top: 33%;
+    }
+    .my-btn-tr,
+    .my-btn-qu {
+        width: 190px;
+        height: 55px;
+        border-radius: 13px;
+    }
+    .my-btn-tr a,
+    .my-btn-qu a{
+        font-size: 1.6rem;
+    }
+    .butHolder{
+        margin-top: 50px;
+    }
+    .carousel-control-next-icon,
+    .carousel-control-prev-icon{
+        width: 70px;
+        height: 70px;
+    }
+    /* home */
+    .logo {
+        width: 250px;
+    }
+    .nav-item a{
+        font-size: 1.8rem;
+    }
+    .navbar-nav {
+        margin-left: 37% !important;
+    }
+    .nav-item {
+        margin: 15px 9px;
+    }
+
+    /* .carousel-caption {
+        top: 31%;
+    }
+    .carousel-caption h5 {
+        font-size: 6rem;
+        line-height: 116px;
+    }
+    .my-btn-tr,
+    .my-btn-qu {
+        width: 249px;
+        height: 65px;
+        border-radius: 18px;
+    }
+    .my-btn-tr a,
+    .my-btn-qu a{
+        font-size: 33px;
+    }
+    .carousel-control-next-icon,
+    .carousel-control-prev-icon{
+        width: 80px;
+        height: 80px;
+    } */
+
+    /* .about-cont p {
+        line-height: 31px;
+        font-size: 1.4rem;
+    }
+    .about-cont h2 {
+        font-size: 3.4rem;
+    }
+    .read-more-btn {
+        width: 251px;
+        height: 60px;
+        border-radius: 15px;
+    }
+    .read-more-btn a{
+        font-size: 1.7rem;
+    }
+    .numberHolder{
+        height: 550px;
+    }
+    .num-content h2 {
+        line-height: 61px;
+        font-size: 3.4rem;
+    }
+    .num-content p {
+        font-size: 1.4rem;
+    }
+    .num p{
+        font-size: 2rem;
+    }
+    .numnumbr{
+        font-size: 4rem !important;
+    }
+    .num-img{
+        height: 750px;
+    }*/
+   
+    /*
+    .serviceHolder h2, 
+    .BlogHolder h2,
+    .map-desc h2,
+    .language h2,
+    .clientsHolder h2,
+    .tetimonialHolder h2,
+    .contactHolder h2{
+        font-size: 4rem;
+    }
+    .map-desc h3{
+        font-size: 2.5rem;
+    }
+    .serviceHolder p,
+    .BlogHolder p,
+    .tetimonialHolder span,
+    .tetimonialHolder p,
+    .contactHolder p{
+        font-size: 1.6rem !important;
+    }
+    .map-desc p{
+        font-size: 1.4rem ;
+    }
+    .service-name,
+    .bloge-name{
+        font-size: 2.2rem !important;
+    }
+    .single-blog{
+        height: 447px;
+    }
+    .countries ul li{
+        font-size: 27px;
+    }
+    .lang-btn a {
+        font-size: 25px;
+    }
+    .lang-btn {
+        width: 220px;
+        height: 55px;
+    } */
+
+
+
+}
+
+@media (min-width: 1500px) and (max-width: 1824px) {
+    .carousel-caption h5 {
+        font-size: 4.7rem;
+        line-height: 85px;
+    }
+}
+/* big screen */
+@media (min-width: 1825px){
+    body h2{
+            font-size: 3.2rem !important;
+            line-height: 60px !important;
+    }
+    body p{
+        font-size: 1.8rem !important;
+        line-height: 36px !important;
+    }
+    .serviceHolder{
+        margin-top: 22%;
+    }
+    .carousel-caption h5 {
+        font-size: 5rem;
+        line-height: 85px;
+    }
+    .my-btn-tr,
+    .my-btn-qu {
+        width: 220px;
+        height: 65px;
+        border-radius: 14px;
+    }
+    .my-btn-tr a,
+    .my-btn-qu a{
+        font-size: 2rem;
+    }
+    .butHolder{
+        margin-top: 80px;
+    }
+    .service-desc{
+        margin-bottom: 110px;
+    }
+    .service-name,
+    .bloge-name{
+        font-size: 2.5rem !important;
+    }
+    .bloge-name{
+        margin-top: 30px;
+    }
+    .fa-arrow-right{
+        font-size: 3rem;
+    }
+    .single-service:hover .fa-arrow-right{
+        color: #fff !important;
+        transform: rotate(0);
+        font-size: 3.3rem;
+        
+    }
+    .single-blog:hover .fa-arrow-right{
+        transform: rotate(0);
+        font-size: 3.3rem;
+    
+    }
+    .arrow-circle{  
+        width: 40px;
+        height: 40px;
+        bottom: 49px;    
+        transition: all .3s ease-in-out;
+    }
+    .arrow-circle2{
+        width: 37px;
+        height: 37px;
+        bottom: 124px;
+        transition: all .3s ease-in-out;
+    }
+
+    .read-more-btn {
+        width: 251px;
+        height: 60px;
+        border-radius: 15px;
+    }
+    .read-more-btn a{
+        font-size: 1.7rem;
+    }
+    .num-img{
+        width: 600px !important;
+    }
+    .numberHolder{
+        height: 550px;
+    }
+    .numnumbr{
+        font-size: 4rem !important;
+    }
+    .num p{
+        font-size: 2rem ;
+        margin-top: 15px;
+    }
+    .map-desc h3{
+        font-size: 2.8rem;
+        list-style: 60px;
+        word-spacing: 2px;
+    }
+    .countries{
+        justify-content: center;
+    }
+    .countries ul li {
+        font-size: 1.9rem;
+        line-height: 36px;
+    }
+    .lang-btn a {
+        font-size:1.7rem;
+    }
+    .lang-btn {
+        width: 250px;
+        height: 59px;
+    }
+    .single-blog{
+        height: 447px;
+    }
+
+    .foot-links a,
+    .item a{
+        font-size: 1.9rem;
+        line-height: 42px !important;
+    }
+    .contact-form label, .form-label{
+        font-size: 1.8rem !important;
+    }
+    .input-f{
+        padding-bottom: 1px;
+    }
+    .sub-btn {
+        font-size: 1.8rem;
+    }
+    /* earth iframe */
+    iframe {
+        width: 507px !important;
+        height: 452px;
+    }
+    .serv-det-list li{
+        font-size: 1.7rem;
+    }
+    .exp-content p{
+        margin-top: 60px;
+        font-size: 2.4rem !important;
+        line-height: 48px !important;
+    }
+    .jobHeaderHolder h2{
+        font-size: 4rem !important;
+        line-height: 113px !important;
+    }
+    
+    .long-pic{
+        height: 560px !important;
+    }
+    .short-pic {
+        width: 51% !important;
+        height: 389px !important;
+        margin-top: 30% !important;
+    }
+    .cont{
+        margin-top: 6% !important;
+    }
+    .cont ul li{
+        font-size: 1.7rem !important;
+    }
+}
+@media (min-width: 2000px) and (max-width: 2200px) {
+    .jobHeaderHolder h2{
+        font-size: 4.1rem !important;
+        line-height: 113px !important;
+    }
+    .short-pic {
+        margin-top: 26% !important;
+    }
+}
+/* vBig */
+@media (min-width: 2200px){
+    .serviceHolder{
+        margin-top: 12%;
+    }
+    .carousel-caption h5 {
+        font-size: 6.6rem;
+        line-height: 127px;
+    }
+    .my-btn-tr,
+    .my-btn-qu {
+        width: 250px;
+        height: 75px;
+        border-radius: 16px;
+    }
+    .my-btn-tr a,
+    .my-btn-qu a{
+        font-size: 2.2rem;
+    }
+    .butHolder{
+        margin-top: 80px;
+    }
+    .carousel-control-next-icon,
+    .carousel-control-prev-icon{
+        width: 80px;
+        height: 80px;
+    }
+    .jobHeaderHolder h2{
+        font-size: 4.8rem !important;
+        line-height: 113px !important;
+    }
+    .short-pic {
+        margin-top: 23% !important;
+    }
+    .long-pic {
+        height: 615px !important;
+        margin-top: 1% !important;
+    }
+}
+
+@media (min-width: 1500px) and (max-width: 1700px) {
+    .logo {
+        width: 200px;
+    }
+    .nav-item a{
+        font-size: 1.5rem;
+    }
+    .navbar-nav {
+        margin-left: 22% !important;
+    }
+    .jobHeaderHolder h2{
+        font-size: 3.4rem !important;
+        line-height: 113px !important;
+    }
+    .short-pic {
+        margin-top: 27% !important;
+    }
+}
+@media (min-width: 2400px) and (max-width: 2600px){
+    .short-pic {
+        margin-top: 20% !important;
+    }
+}
+@media (min-width: 2600px){
+    .short-pic {
+        margin-top: 18% !important;
+    }
+}
+
+@media (min-width: 1701px) and (max-width: 1900px) {
+    .logo {
+        width: 210px;
+    }
+    .nav-item a{
+        font-size: 1.6rem;
+    }
+    .navbar-nav {
+        margin-left: 26% !important;
+    }
+    /* .carousel-caption h5 {
+        font-size: 4rem;
+        line-height: 100px;
+    } */
+}
+@media (min-width: 1901px) and (max-width: 2020px) {
+    .navbar-nav {
+        margin-left: 24% !important;
+    }
+}
+@media (min-width: 2200px){
+    .navbar-nav {
+        margin-left: 44% !important;
     }
 }
